jupyter-ingress.yaml
#Jupyterhub ingress for proxy svc
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  namespace: jupyter
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: lets-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: jupyterhub.131.154.98.24.myip.cloud.infn.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-public
            port:
              number: 80
  tls: 
  - hosts:
    - jupyterhub.131.154.98.24.myip.cloud.infn.it
    secretName: tls-jupyterhub
